# moji

./: README.md  setup.cfg
.github/workflows/: ci.yml
docs/: moji - demo.ipynb
docsrc/: index.rst
moji/: __init__.py  dacc.py  util.py
