[metadata]
name = moji
version = 0.0.8
url = https://github.com/thorwhalen/moji
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Developing a full emoji language
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = moji

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	idiom
	importlib_resources
	numpy

